--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,14 @@
     margin: 0;
   }
 
+  p {
+    background: lightyellow;
+    justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: 2px solid black;
+    padding: 1em;
+  }
+
   .background {
     position: fixed;
     background-image: url("/background.jpg");
@@ -81,8 +89,16 @@
         </div>
       </div>
       <div class="actions">
+        <div class="">
+          <img src="/middle-peace.jpg"/>
+        </div>
+        <div>
+          <p>
+            Bio: Middle Peace is a world music DJ & artist renowned for their beats from Africa, Latin America, and the Middle East. Their music is infused with spiritual elements that uplift and inspire listeners, taking them on a journey of self-discovery and transcendence. With infectious rhythms and grooves, Middle Peace creates an out-of-this-world dance experience that is sure to get people moving. Drawing from their diverse cultural background, Middle Peace seamlessly fuses traditional and modern sounds to create a sound that is both familiar and innovative.
+          </p>
+        </div>
         <div class="item" onclick="location.href='https://mixcloud.com/middlepeace';">
-          <span>Listen to my mixes</span>
+          <span>Mixcloud</span>
         </div>
         <div class="item">
           <span>About</span>
